@@ -1,6 +1,7 @@
 -- SPDX-License-Identifier: GPL-3.0-or-later
 
 local cqerrno = require('cqueues.errno')
+local ffi = require('ffi')
 local kluautil = {}
 
 -- Get length of table
@@ -62,9 +63,31 @@ function kluautil.kr_https_fetch(url, out_file, ca_file)
 		return nil, errmsg
 	end
 
-	out_file:seek("set", 0)
+	out_file:seek('set', 0)
 
 	return true
+end
+
+-- List directory
+function kluautil.list_dir (path)
+	local results = {}
+	local dir = ffi.C.opendir(path)
+	if dir == nil then
+		return results
+	end
+
+	local entry = ffi.C.readdir(dir)
+	while entry ~= nil do
+		local entry_name = ffi.string(entry.d_name)
+		if entry_name ~= '.' and entry_name ~= '..' then
+			table.insert(results, entry_name)
+		end
+		entry = ffi.C.readdir(dir)
+	end
+
+	ffi.C.closedir(dir)
+
+	return results
 end
 
 return kluautil
